[package]
name = "tg-link-remover"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "1.1.0" # En güncel Vercel Rust API handler kütüphanesi
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["macros"] }
