[package]
name = "tg-link-remover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webhook"
path = "api/webhook.rs"

[dependencies]
vercel_runtime = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12.26", features = ["json"] }
tokio = { version = "1.52", features = ["macros"] }
